--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -21,10 +21,13 @@
    "source": [
     "import os\n",
     "\n",
-    "import IPython \n",
-    "IPython.display.display(IPython.display.HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
+    "import IPython\n",
     "\n",
-    "os.chdir('..')"
+    "IPython.display.display(\n",
+    "    IPython.display.HTML(\"<style>.container { width:100% !important; }</style>\")\n",
+    ")\n",
+    "\n",
+    "os.chdir(\"..\")"
    ]
   },
   {
@@ -290,41 +293,53 @@
     "from fpl_ranker.league_of_leagues.leagues_research import LeaguesResearch\n",
     "\n",
     "leagues_list = [\n",
-    "    579956, 356774, \n",
-    "    406089, 626932, 5712, 458888, 406273, 257622, 180769, 684405, 381725, 82273\n",
+    "    579956,\n",
+    "    356774,\n",
+    "    406089,\n",
+    "    626932,\n",
+    "    5712,\n",
+    "    458888,\n",
+    "    406273,\n",
+    "    257622,\n",
+    "    180769,\n",
+    "    684405,\n",
+    "    381725,\n",
+    "    82273,\n",
     "]\n",
     "\n",
     "names_mapping = {\n",
-    "    'Elite20KZ⭐️t.me/FPL_HQ': 'Elite20KZ',\n",
-    "    'Classic TITANS & CHAMPIONSHIP': 'Titans League',\n",
-    "    'World Class Fantasy League': 'World Class League',\n",
-    "    'Тренерский ШТАБ | t.me/FPL_HQ': 'Тренерский ШТАБ',\n",
-    "    'The_Best_Managers': 'Best managers',\n",
-    "    'KZ FPL 2023/2024': 'KZ FPL',\n",
-    "    'League-of-Legends': 'League of Legends',\n",
-    "    'Zakynule FPL League': 'Zakynule FPL League',\n",
-    "    'Classic Premier League': 'Syndicate',\n",
+    "    \"Elite20KZ⭐️t.me/FPL_HQ\": \"Elite20KZ\",\n",
+    "    \"Classic TITANS & CHAMPIONSHIP\": \"Titans League\",\n",
+    "    \"World Class Fantasy League\": \"World Class League\",\n",
+    "    \"Тренерский ШТАБ | t.me/FPL_HQ\": \"Тренерский ШТАБ\",\n",
+    "    \"The_Best_Managers\": \"Best managers\",\n",
+    "    \"KZ FPL 2023/2024\": \"KZ FPL\",\n",
+    "    \"League-of-Legends\": \"League of Legends\",\n",
+    "    \"Zakynule FPL League\": \"Zakynule FPL League\",\n",
+    "    \"Classic Premier League\": \"Syndicate\",\n",
     "    \"Keldibek's League\": \"Keldibek's League\",\n",
-    "    'Open DSML League': 'Open DSML League'\n",
+    "    \"Open DSML League\": \"Open DSML League\",\n",
     "}\n",
     "\n",
     "old_scores = {\n",
-    "    'Elite20KZ': 178.70,\n",
-    "    'Titans League': 168.50,\n",
-    "    'World Class League': 167.41,\n",
-    "    'Тренерский ШТАБ': 171.68,\n",
-    "    'Best managers': 170.13,\n",
-    "    'DV league': 166.32,\n",
-    "    'KZ FPL': 172.46,\n",
-    "    'League of Legends': 166.28,\n",
-    "    'Zakynule FPL League': 170.83,\n",
-    "    'Syndicate': 166.13,\n",
+    "    \"Elite20KZ\": 178.70,\n",
+    "    \"Titans League\": 168.50,\n",
+    "    \"World Class League\": 167.41,\n",
+    "    \"Тренерский ШТАБ\": 171.68,\n",
+    "    \"Best managers\": 170.13,\n",
+    "    \"DV league\": 166.32,\n",
+    "    \"KZ FPL\": 172.46,\n",
+    "    \"League of Legends\": 166.28,\n",
+    "    \"Zakynule FPL League\": 170.83,\n",
+    "    \"Syndicate\": 166.13,\n",
     "    \"Keldibek's League\": 165.53,\n",
-    "    'Open DSML League': 156.97\n",
+    "    \"Open DSML League\": 156.97,\n",
     "}\n",
     "event_id = 4\n",
     "\n",
-    "research = LeaguesResearch(leagues_list, event_id, old_scores, names_mapping, summary_dir = 'artefacts/gw4')\n",
+    "research = LeaguesResearch(\n",
+    "    leagues_list, event_id, old_scores, names_mapping, summary_dir=\"artefacts/gw4\"\n",
+    ")\n",
     "research.leagues_summary"
    ]
   },
@@ -338,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -352,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
